syntax = "proto3";

option go_package="pb";
package pb;

/* https://developers.google.com/protocol-buffers/docs/proto?csw=1#scalar */

service Service {
  rpc LotsOfReplies(Empty) returns (stream ReplicationMsg);
}


message Empty {

}


message ReplicationMsg{
    repeated uint64 c_uuids = 1;
    map<string,string> msg_mime = 2;
    bytes msg = 3;
}

